# FaceAnalysis

./: .cursorrules  .env.example  .gitignore  .replit  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TECHNICAL_README.md  alembic.ini  index.html  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  replit.nix  requirements.txt  tailwind.config.js  test.ipynb  vite-api-plugin.js  vite.config.js
.tmp/: backend.err  frontend.err
api/: analyze-face.js
app/: globals.css  layout.jsx  page.jsx
backend/: ai_access.py  analyze_face.py  answer_summary.py  api_routes.py  assessment_limits.py  assistant_agent.py  assistant_tools.py  auth.py  aws_rekognition.py  beauty_assistant.py  build_aws_report.py  build_eye_report.py  calibration.py  clinical_guardrails.py  config.py  cv_report.py  database.py  dev_config.py  email_service.py  eye_analysis.py  face_crop.py  face_parsing.py  face_parsing_metrics.py  feature_context.py  hair_analysis.py  hair_segmentation.py  image_client.py  image_utils.py  llm_client.py  logging_config.py  main.py  media_storage.py  mediapipe_analysis.py  models.py  multi_view.py  narrative_orchestrator.py  narrative_schemas.py  openai_client.py  opencv_metrics.py  photo_storage.py  (+31 more)
components/: AdminPanelPage.jsx  AdminReviewPanel.jsx  AnalyticsScripts.jsx  App.jsx  AppShell.jsx  AuthModal.jsx  BillingPage.jsx  DashboardPage.jsx  DevShortcuts.jsx  EyeReportPanel.jsx  HistoryPage.jsx  Landing.jsx  OnboardingLayout.jsx  PaymentSuccessPage.jsx  PhotoUpload.jsx  Questionnaire.jsx  QuestionnaireWelcome.jsx  Report.jsx  Scanning.jsx  Settings.jsx  SiteNavbar.jsx  TopNav.jsx
docs/: AURASCAN_RESEARCH.md  HANDOVER_CHECKLIST.md  MONGODB_SETUP.md  REPLIT_SETUP.md  SERVICE_SETUP.md  SPRINT_LOG.md  industry-practices.md  pre-prod-checklist.md  requirements.md  sop.md
fixtures/: README.md  assessment_6a50ffd3_profile_slice.json  assessment_sample_full.json  profile_chin_overlay_sample.json
scripts/: _nb_dump.txt  calibrate_norwood_temples.py  enforce-pnpm.cjs  preview_projected_after_prompt.py  prototypicality_sanity.py  replit-start.sh  rerun_parsing.py  rerun_projected_after.py  rerun_projected_analysis.py  rerun_skin_analysis.py  smoke_test.py  test-middleware-probes.js  test_ai_visuals_e2e.py  test_hair_norwood_assessment.py
src/: App.jsx  index.css
utils/: adminPanel.js  aestheticProjection.js  analyzeFace.js  anthropometrics.js  apiClient.js  appMode.js  authClient.js  buildEyeReport.js  cheekGuides.js  constants.js  cvReport.js  demoPhotos.js  eyeAnalysis.js  faceCrop.js  faceMeshConnections.js  featureParsing.js  historyStorage.js  objectFitContentRect.js  onboarding.js  openai.js  opencvMetrics.js  photoValidation.js  pipelineStatus.js  projectedAfter.js  projectionCanvas.js  protocolCheck.js  protocolFeatureImages.js  protocolGenerator.js  protocolSections.js  prototypicalityEngine.js  prototypicalityMeshProjection.js  prototypicalityNorms.js  qovesProtocolModel.js  reportPdf.js  reportWorkflow.js  routes.js  safeFormat.js  settings.js  theme.jsx
(+315 files in other folders)
