[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mediapipe==0.10.14",
    "numpy>=1.26.0",
    "openai>=1.50.0",
    "opencv-python-headless>=4.10.0",
    "pillow>=10.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "replit-object-storage>=1.0.2; python_version < '3.13'",
    "reportlab>=4.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.30.0",
    # SegFormer face parsing (feature crops). Kept CPU-only via the pytorch-cpu
    # index below so a plain `uv sync` installs it on Windows and Linux/Replit.
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.44",
]

# Pin torch/torchvision to the CPU wheels on Windows + Linux (no CUDA pulled).
# macOS falls through to PyPI (correct native build) since no source override applies.
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
