[project]
name = "myface-backend"
version = "0.1.0"
description = "MyFace Python FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mediapipe==0.10.14",
    "numpy>=1.26.0",
    "openai>=1.50.0",
    "opencv-python-headless>=4.10.0",
    "pillow>=10.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "replit-object-storage>=1.0.2; python_version < '3.13'",
    "reportlab>=4.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.30.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.44",
]
